# realtime-messaging-app

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: DATABASE_USAGE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ROOM_SERVICE.md  ROOM_SERVICE_SUMMARY.md  USER_PROFILE_SERVICE.md  alembic.ini  example_user_operations.py  pyproject.toml  test_authentication.py  test_imports.py  test_message_validation.py  test_rabbitmq.py  test_redis.py  test_room_service.py  test_user_profile.py  test_websocket.py
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: depends.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  base.py  chat_room.py  message.py  notification.py  room_participant.py  user.py
backend/app/routes/: auth.py  rooms.py  users.py
backend/app/services/: auth.py  room_service.py  user_service.py
backend/realtime_messaging/: config.py  const.py  dependencies.py  exceptions.py  main.py  messages.py
backend/realtime_messaging/db/: depends.py
backend/realtime_messaging/migrations/: env.py
backend/realtime_messaging/models/: __init__.py  auth.py  chat_room.py  direct_messages.py  message.py  notification.py  room_participant.py  user.py  userprofile.py
backend/realtime_messaging/routes/: __init__.py  auth.py  direct_messages.py  messages.py  notifications.py  rooms.py  userprofiles.py  users.py
backend/realtime_messaging/services/: __init__.py  auth.py  common.py  (+11 more)
backend/realtime_messaging_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_auth.py  test_messages.py
(+51 files in other folders)
