[project]
name = "realtime-messaging-app"
version = "0.1.0"
description = "A backend for a real-time messaging application using FastAPI and WebSockets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=6.0.0",
    "alembic>=1.10.0",
    "python-jose[cryptography]>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
[tool.mypy]
files=  ["services", "models", "schemas", "main.py"]
[tool.mypy.plugins.pydantic]
enabled = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.alembic]
# path to migration scripts
script_location = "app/migrations"
# database URL - this will be overridden by env.py
sqlalchemy.url = "postgresql://postgres:password@postgres:5432/db"
# sys.path path, will be prepended to sys.path if present
prepend_sys_path = "."
